# InkSightProject

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
data/: README.md
docs/: quickstart.md
examples/: aoi_example.json
gaze_lab/: __init__.py  config.py  logging_setup.py
gaze_lab/cli/: __init__.py  export_aoi_report.py  export_heatmap.py  export_overlay.py  map_to_reference.py  ocr_extract.py  record_realtime.py
gaze_lab/io/: __init__.py  cloud_loader.py  player_compat.py  player_layout.py  realtime_client.py
gaze_lab/io/realtime/: __init__.py  interfaces.py  mock_client.py  pupil_client.py
gaze_lab/ocr/: __init__.py  engine.py  preprocess.py
gaze_lab/processing/: __init__.py  aoi.py  filters.py  fixations_ivt.py  mapping_2d.py
gaze_lab/snapshots/: __init__.py  extractor.py
gaze_lab/viz/: __init__.py  heatmap.py  overlay.py
scripts/: make_synthetic_demo.py
tests/: __init__.py  test_aoi.py  test_fixations.py  test_fixations_ivt.py  test_heatmap_smoke.py  test_ocr_engine_imports.py  test_overlay_smoke.py  test_peak_dwell_selection.py  test_preprocess_smoke.py  test_snapshot_crop_smoke.py
